--- a/weather_app/src/component/weather.css
+++ b/weather_app/src/component/weather.css
@@ -1,13 +1,17 @@
 .main {
     position: relative;
-    background: linear-gradient(91deg, #f1eefc, #9dc6ff 70%, #a5bcff);
+    /* background: linear-gradient(91deg, #f1eefc, #9dc6ff 70%, #a5bcff); */
     /* （body背景色） */
     height: 700px;
+    font-family: sans-serif;
+    background: url(./thunderstorm.jpeg); 
+    background-size:cover;
+    color: white;
 }
 
 .icon{
     font-size: 100px;
-    color: rgb(219, 83, 83);
+    color: white;
 }
 .input{
     background-color: transparent;
@@ -27,12 +31,15 @@
     height: 500px;
     left: 200px;
     top: 100px;
+    /* background: url(./background.jpg);  */
+    /* background: url(background.jpg);    */
+    
     
 }
 
 .card_top{
     height: 250px;  
-    background: linear-gradient(to right, #bb313e25, #bb313e25, #d7222925, #dd4a1625, #e4761525, #f5c50025, #f0e92725, #b1ce2425, #48a93525, #03944525, #157c4f25, #176a5825, #1b556325, #1d386f25, #1d386f25, #20277825, #52266325, #8a244b25);
+    background:transparent;
     display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -45,7 +52,7 @@
     background-color: transparent;
 }
 .card_bottom{
-    background-color: wheat;
+    background-color: transparent;
     height: 250px;
     display: flex;
     flex-wrap: wrap;
@@ -57,5 +64,6 @@
     width: 150px;
     margin-top: 27.5px;
     height: 200px;
+    background-color: transparent;
 }
 
