--- a/weather_app/src/component/weather.css
+++ b/weather_app/src/component/weather.css
@@ -1,34 +1,64 @@
+
 .main {
-    position: relative;
+    
+    position: fixed;
     /* background: linear-gradient(91deg, #f1eefc, #9dc6ff 70%, #a5bcff); */
     /* （body背景色） */
     height: 700px;
+    width: 110%;
     font-family: sans-serif;
-    background: url(./thunderstorm.jpeg); 
-    background-size:cover;
+    /* background: url(./drizzle.jpeg); 
+    background-size:contain; */
     color: white;
+    transition: background 3s;
+    
 }
 
 .icon{
     font-size: 100px;
     color: white;
 }
+
+.inputComponent{
+    height: 80px;
+    position: relative;
+
+
+
+}
 .input{
     background-color: transparent;
     color: white;
-    border-bottom: 5px solid black;
-    border-radius: 0;
-    border:0;
+    width: 100%;
+    height: 100%;  
+    padding-top: 20px;
+    border: none;
+    font-size: 25px;
+    
 }
 .input:focus{
     background-color: transparent;
     box-shadow: none;
 }
+.labelCity{
+    position: absolute;
+    width: 100%;
+    height: 50px;     
+    left: 0%;
+    top:30%;
+    border-bottom: 1px solid black;
+    /* left: -44%;
+    top: 170%; */
+    pointer-events: none;
+}
+.contentCity{
+    
+}
 
 .card {
     position: relative;
     width: 900px;
-    height: 500px;
+    height: 470px;
     left: 200px;
     top: 100px;
     /* background: url(./background.jpg);  */
@@ -43,13 +73,41 @@
     display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+
+  /* background-color: wheat; */
+
 }
 
 .card_top_item{
     width: 250px;
-    margin-top: 27.5px;
-    height: 175px;
+    margin-top: 10px;
+    height: 220px;
     background-color: transparent;
+    font-weight: bold;
+
+   /* background-color:yellowgreen; */
+}
+.card_top_item_description{
+    font-size: 30px;
+
+}
+.card_top_item_location{
+    font-size: 25px;
+    margin-top: 20px;
+}
+.card_top_item_temp{
+    font-size: 60px;
+}
+.card_top_item_tempMaxMin{
+    font-size: 30px;
+    color: #BDBDBD;
+    margin-bottom: 20px;
+}
+.card_top_item_HWV{
+    font-size: 20px;
+    margin-top: 10px;
+    text-align:left;
+    margin-left: 20px;
 }
 .card_bottom{
     background-color: transparent;
@@ -57,13 +115,45 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+
+    font-weight: bold;
 }
 
 .card_bottom_item{
-    background-color:white;
+    
     width: 150px;
-    margin-top: 27.5px;
-    height: 200px;
+    margin-top: 7.5px;
+    height: 230px;
     background-color: transparent;
+
+    display: flex;
+    flex-direction: column;
+    
+    
+}
+
+.card_bottom_item_date{
+    font-size: 20px;
+    text-align:left;
+    margin-left: 15px;
+    
+}
+.card_bottom_item_icon{
+    text-align:left;
+    margin-left: 5px;
+    margin-top: 10px;
+}
+
+.card_bottom_item_temperture{
+    font-size: 30px;
+    text-align:left;
+    margin-left: 15px;
+    margin-top: 10px;
+}
+.card_bottom_item_description{
+    font-size: 17px;
+    text-align:left;
+    margin-left: 15px;
+    margin-top: 10px;
 }
 
