--- a/weather_app/src/component/weather.css
+++ b/weather_app/src/component/weather.css
@@ -1,8 +1,10 @@
 
 .main {  
     position: fixed;
-    height: 700px;
-    width: 110%;
+    height: 100%;
+    width: 100%;
+    padding: 0%;
+    margin: 0%;
     font-family: sans-serif;
     color: white;
     
@@ -40,6 +42,8 @@
     margin-top: 50px;
     height: 80px;
     position: relative;
+    text-align: left;
+    
 
 
 
@@ -52,6 +56,7 @@
     padding-top: 20px;
     border: none;
     font-size: 25px;
+
     
 }
 .input:focus{
@@ -62,12 +67,14 @@
     position: absolute;
     width: 100%;
     height: 50px;     
-    left: 0%;
+    margin-left: 0px;
     top:30%;
     border-bottom: 2px solid white;
     pointer-events: none;
+    text-align: left;
 }
 .contentCity{
+    left: 0%;
     
 }
 
@@ -102,7 +109,7 @@
     height: 220px;
     background-color: transparent;
     font-weight: bold;
-
+    
    /* background-color:yellowgreen; */
 }
 .card_top_item_description{
@@ -118,7 +125,7 @@
 }
 .card_top_item_tempMaxMin{
     font-size: 30px;
-    color: #BDBDBD;
+    color: #E0E0E0;
     margin-bottom: 20px;
 }
 .card_top_item_HWV{
@@ -147,7 +154,7 @@
     display: flex;
     flex-direction: column;
     
-    
+  
 }
 
 .card_bottom_item_date{
@@ -173,5 +180,108 @@
     text-align:left;
     margin-left: 15px;
     margin-top: 10px;
+}
+
+@media(max-width:1100px){
+    .main{
+        width: 1100px;
+    }
+    .card{
+        left:100px
+    }
+
+}
+
+@media(max-width:1000px){
+    .main{
+        width: 1000px;
+    }
+    .card{
+        left:50px
+    }
+
+}
+
+@media(max-width:900px){
+    .main{
+        width: 1000px;
+    }
+    .card{
+        left:0px;
+        top:0px;
+        width:750px;
+    }
+
+}
+
+@media(max-width:750px){
+    .main{
+        position: relative;
+        height: 900px;
+        background: black !important;
+    }
+    .card{
+       width: 600px;
+       height: 900px;
+       margin:0px;
+    }
+    .card_top{
+        height: 440px;
+        width: 600px;
+        margin:0px;
+    }
+    .card_top_item{
+       margin:0px;
+    }
+    .card_bottom{
+        width: 600px;
+        height:460px;
+        margin:0px;
+    }
+    .card_bottom_item{
+        margin:0px;
+
+    }
+}
+
+@media(max-width:600px){
+    .main{
+        position: relative;
+        height: 1450px;
+        background: black !important;
+    }
+
+    card{
+        width: 300px;
+        height: 1450px;
+        margin:0px;
+     }
+
+
+    .card_top{
+        height: 660px;
+        width: 300px;
+        margin:0px;
+    }
+
+
+    .card_top_item{
+        margin:0px;
+     }
+
+    .card_bottom{
+        width: 300px;
+        height:790px;
+        margin:0px;
+    }
+
+
+
+    .card_bottom_item{
+        margin:0px;
+
+    }
+
+
 }
 
